# lector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ch15_fastapi.md  compose.yaml  doc_ch15_response.network-response  pyproject.toml  pyrightconfig.json
app/: __init__.py
data/: category_cards.jsonl  cost_tables.json
docs/: production-readiness.md
frontend/: .env.example  40-create-auth-file.sh  Dockerfile  index.html  nginx.conf.template  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
lector-api/: Dockerfile  pom.xml
scripts/: build_category_kb.py  demo_selection_pipeline.py  export_selection_report.py  run_eval.py  setup_pipeline.py  setup_pipeline.sh  smoke_external_services.py  test_data_source.py
tests/: test_category_insight.py  test_category_kb_builder.py  test_category_store.py  test_cli_entrypoints.py  test_compose_config.py  test_compression.py  test_connection.py  test_context.py  test_data_cache.py  test_data_source.py  test_dispatch_tool.py  test_eval_harness.py  test_exchange_rate.py  test_fork_guard.py  test_ingest_from_products.py  test_item_picker.py  test_item_search.py  test_llm.py  test_local_stack_security.py  test_main_agent.py  test_market_trend_research.py  test_memory_store.py  test_middleware.py  test_monitor.py  test_opensearch_config.py  test_path_utils.py  test_planner.py  test_price_compare.py  test_procurement_quote.py  test_product_scraper.py  test_profit_calculator.py  test_prompts.py  test_readiness.py  test_report_exporter.py  test_selection_decision.py  test_server.py  test_server_files.py  (+5 more)
(+114 files in other folders)
