[project]
name = "globex-agent"
version = "0.1.0"
description = "Agent practice environment wired to DeepSeek through LangChain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.8.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.2.0",
    "numpy>=1.26.0",
    "opensearch-py>=2.6.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "pymongo>=4.10.0",
    "pyyaml>=6.0",
    "uvicorn>=0.35.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
